# nuro-arm

./: '  .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  assembly_guide.md  connectfour.html  contact.html  education.html  environment.yml  environment_mac.yml  environment_win.yml  events.html  footer.html  header.html  index.html  index.md  install.sh  installation_guide.md  mac_setup.md  nuro-arm-intro.ipynb  old_index.html  platform.html  projects.html  pyproject.toml  setup.py  windows_setup.md
camera/: camera.py  configs.yaml  utils.py
class_material/: template.py
css/: styles.css
docs/: camera.rst  conf.py  contributions.rst  examples.rst  getting_started.rst  index.rst  modules.rst  nuro_arm.camera.rst  nuro_arm.robot.rst  nuro_arm.rst  projects.rst  requirements.txt  robot.rst
documentation/: camera.html  contributions.html  examples.html  genindex.html  getting_started.html  index.html  objects.inv  projects.html  robot.html  search.html  searchindex.js
examples/: complex_motion.py  throw_cube.py
js/: footer.js  header.js  main.js
neu_ro_arm/: check_devices.sh  constants.py  transformation_utils.py
neu_ro_arm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
nuro_arm/: __init__.py  constants.py  cube.py  tk_utils.py  transformation_utils.py
robot/: robot.py  safe_xarm.py  simulator.py  xarm.py  xarm.urdf  xarm2.urdf  xarm_old.py
robots/: braccio.py  joint_state.py  pybullet_robot.py  xarm.py
scripts/: camera_calibration.py  move_arm_with_gui.py  pickup_cube.py  record_movements.py  setup_camera.py  setup_xarm.py  (+1 more)
(+155 files in other folders)
