[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nuro-arm"
version = "0.0.1"
authors = [
  { name="David Klee", email="klee.d@northeastern.edu" },
]
description = "NURO Arm: Accessible Robotics Educational Platform"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/dmklee/nuro-arm"
"Bug Tracker" = "https://github.com/dmklee/nuro-arm/issues"
